<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Senmicro Demo App</string>

    <string name="io_header">Ein-/Ausgänge</string>
    <string name="led_header">Digitale Ausgänge</string>
    <string name="button_header">Digitale Eingänge</string>
    <string name="pot_header">Analoger Eingang</string>
    
    <string name="DI0">Digital Eingang 0:</string>
    <string name="DI1">Digital Eingang 1:</string>
    <string name="DI2">Digital Eingang 2:</string>
    <string name="DI3">Digital Eingang 3:</string>
    
    <string name="not_pressed">Aus</string>
    <string name="pressed">Ein</string>

    <string name="in_geofence">In Bereich</string>
    <string name="out_geofence">Ausserhalb Bereich</string>

    <string name="weblink">www.senmicro.biz/android</string>
    
    <string name="error_default">An unknown error has occurred.  Please contact office@senmicro.biz so that we can determine the source of the issue and attempt to fix it.</string>
    <string name="error_missing_open_accessory_framework">The Android OS version that you are running is missing the com.android.future.usb library that is required to run this demo.  The OS version that you are running should contain these libraries. Please contact office@senmicro.biz so that we can work to correct this issue for this device. </string>
    <string name="error_firmware_protocol">The firmware version on the attached device requires a protocol that is not supported by this version of the application.  Please check the Android Marketplace to see if there is an update available for this application. If you are using the source version, please check www.senmicro.biz for the latest application source code.</string>


    <string name="geofence_header">Lokalisierung</string>
    <string name="actual_data">Aktuelle GEO Daten</string>
    <string name="actual_imei_label">Gerät-ID</string>
    <string name="geofence">Lokalisationsbereich (Geofence)</string>
    <string name="latitude_label">Breitengrad</string>
    <string name="longitude_label">Längengrad</string>
    <string name="register_geofence">Speichere Geofence</string>
    <string name="unregister_geofence">Lösche Geofence</string>
    <string name="set_to_here">Aktuelle Position</string>
    <string name="radius_label">Radius</string>
    <string name="radius_default_value">1000</string>
    <string name="geofence_status_label">Status</string>


    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>

    <!-- Messages -->
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered Geofence</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited Geofence</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
      <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
     <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
</resources>
