<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <!-- Title bar for LED controls -->
    
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background='@color/title_bar'
    >
		<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/led_header"
	    android:id="@+id/text_view1"
	    />
    </LinearLayout>
    
    <!-- LED control buttons -->
    
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >

		<view
		class="biz.senmicro.android.SenmicroDemo.LEDControl"
		android:id="@+id/led_7"
		android:layout_height="wrap_content" 
		android:src="@drawable/led_off"
		android:background="@null" 
		android:layout_width="wrap_content"	
		/>
		<view
		class="biz.senmicro.android.SenmicroDemo.LEDControl"
		android:id="@+id/led_6"
		android:layout_height="wrap_content" 
		android:src="@drawable/led_off"
		android:background="@null" 
		android:layout_width="wrap_content"	
		/>
		<view
		class="biz.senmicro.android.SenmicroDemo.LEDControl"
		android:id="@+id/led_5"
		android:layout_height="wrap_content" 
		android:src="@drawable/led_off"
		android:background="@null" 
		android:layout_width="wrap_content"	
		/>
		<view
		class="biz.senmicro.android.SenmicroDemo.LEDControl"
		android:id="@+id/led_4"
		android:layout_height="wrap_content" 
		android:src="@drawable/led_off"
		android:background="@null" 
		android:layout_width="wrap_content"	
		/>
		<view
		class="biz.senmicro.android.SenmicroDemo.LEDControl"
		android:id="@+id/led_3"
		android:layout_height="wrap_content" 
		android:src="@drawable/led_off"
		android:background="@null" 
		android:layout_width="wrap_content"	
		/>
		<view
		class="biz.senmicro.android.SenmicroDemo.LEDControl"
		android:id="@+id/led_2"
		android:layout_height="wrap_content" 
		android:src="@drawable/led_off"
		android:background="@null" 
		android:layout_width="wrap_content"	
		/>
		<view
		class="biz.senmicro.android.SenmicroDemo.LEDControl"
		android:id="@+id/led_1"
		android:layout_height="wrap_content" 
		android:src="@drawable/led_off"
		android:background="@null" 
		android:layout_width="wrap_content"	
		/>
		<view
		class="biz.senmicro.android.SenmicroDemo.LEDControl"
		android:id="@+id/led_0"
		android:layout_height="wrap_content" 
		android:src="@drawable/led_off"
		android:background="@null" 
		android:layout_width="wrap_content"	
		/>

	</LinearLayout>


	<!-- Title bar for push buttons -->
	
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background='@color/title_bar'
    >
		<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/button_header"
	    android:id="@+id/text_view2"
	    />
    </LinearLayout>
 
 	<!-- Creation of Button 1 -->
    
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@color/sub_title"
	    >
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_1"
		    android:paddingRight="8sp"
		    />
    	</LinearLayout>
    	
   		<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/not_pressed"
		    android:id="@+id/button1"
		    />
		</LinearLayout>
    </LinearLayout>
    
	<!-- Creation of Button 2 -->
    
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@color/sub_title"
	    >
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_2"
		    android:paddingRight="8sp"
		    />
    	</LinearLayout>
    	
   		<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/not_pressed"
		    android:id="@+id/button2"
		    />
		</LinearLayout>
    </LinearLayout>
    
    <!-- Creation of Button 3 -->
    
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@color/sub_title"
	    >
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_3"
		    android:paddingRight="8sp"
		    />
    	</LinearLayout>
    	
   		<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/not_pressed"
		    android:id="@+id/button3"
		    />
		</LinearLayout>
    </LinearLayout>
    
    <!-- Creation of Button 4 -->
    
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
	    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@color/sub_title"
	    >
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/button_4"
		    android:paddingRight="8sp"
		    />
    	</LinearLayout>
    	
   		<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
		    <TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/not_pressed"
		    android:id="@+id/button4"
		    />
		</LinearLayout>
    </LinearLayout>
    
    <!-- Title bar for potentiometer -->
	
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background='@color/title_bar'
    >
		<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/pot_header"
	    android:id="@+id/text_view3"
	    />
    </LinearLayout>
    
    <!-- Creating progress bar for potentiometer -->
    <ProgressBar
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/progress_bar"
	android:progress="0"
	android:max="100"
	style="?android:attr/progressBarStyleHorizontal"
    />

    <!-- Creating actual data area -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background='@color/title_bar'>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/actual_data"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sub_title"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/actual_imei_label"
                android:paddingRight="52sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/value_actual_imei"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/actual_imei_label"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sub_title"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude_label"
                android:paddingRight="8sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/value_actual_position_lat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude_label"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sub_title"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude_label"
                android:paddingRight="8sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/value_actual_position_long"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude_label"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background='@color/title_bar'>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/geofence"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sub_title"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude_label"
                android:paddingRight="8sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/value_latitude_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sub_title"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude_label"
                android:paddingRight="8sp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/value_longitude_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sub_title"
            >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/radius_label"
                android:paddingRight="40sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/value_radius_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/radius_default_value"
                android:inputType="numberDecimal"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Register and unregister geofences buttons. -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/register"
            android:layout_below="@id/value_radius_1"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_geofence"
            android:onClick="onRegisterGeofenceClicked" />
        <Button
            android:id="@+id/unregister"
            android:layout_below="@id/value_radius_1"
            android:layout_toRightOf="@id/register"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/unregister_geofence"
            android:onClick="onUnregisterGeofenceClicked" />
        <Button
            android:id="@+id/set_to_here"
            android:layout_below="@id/value_radius_1"
            android:layout_toRightOf="@id/unregister"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/set_to_here"
            android:onClick="onSetToHereClicked" />
    </LinearLayout>

    <!-- Senmicro Logo. -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/senmicro_logo"/>

    </LinearLayout>

    <!-- Senmicro Link. -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/weblink"
            android:gravity="center"
            />

    </LinearLayout>




</LinearLayout>
</ScrollView>
